--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "node-api",
 	"main": "index.js",
   	"scripts": {
+  		"test" : "mocha",
 	    "start": "node index.js"
   	},
   	"engines": {
@@ -9,6 +10,7 @@
   	},
 	"dependencies": {
 		"express": "~4.9.0",
-    	"body-parser": "~1.8.1"
+    	"body-parser": "~1.8.1",
+    	"mocha": "*"
 	}
 }
