--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
 	"dependencies": {
 		"express": "~4.9.0",
     	"body-parser": "~1.8.1",
-    	"mocha": "*"
+    	"mocha": "*",
+    	"i18n" : "*",
+    	"superagent": "*"
+
 	}
 }
